# wizelit-mcp

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  agent.py  cleanup.sh  database.py  deploy_mcp.sh  docker-entrypoint.sh  graph.py  main.py  path_proxy.py  pyproject.toml  pyrightconfig.json  quickstart.sh  start-code-scout.sh  start-refactoring-agent.sh  start.sh
.chainlit/: config.toml
.files/04f4620c-4811-4262-be34-7216f2ad0cfe/: 66bc4e7a-7944-4f42-9f3c-f4e001991bfe.json
.github/workflows/: deploy.yml
cdk/: .gitignore  README.md  app.py  cdk.context.json  cdk.json  mcp_servers_stack.py
code_scout/: __init__.py  code_scout.py  github_cache.py  github_helper.py
mcp_servers/: __init__.py  exceptions.py
mcp_servers/code-formatter/: __init__.py  formatter.py  main.py
mcp_servers/code-scout/: README.md  __init__.py  github_cache.py  scanner.py  server.py
mcp_servers/refactoring-agent/: main.py  requirements.txt
mcp_servers/schema-validator/: __init__.py  main.py  validator.py
public/: styles.css  theme.json
public/elements/: RawHtmlRenderElement.jsx
utils/: __init__.py  bedrock_config.py
